--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>欢迎页面</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    hello world
+    <div class="container">
+        <div class="welcome-content">
+            <h1>欢迎访问</h1>
+            <p>感谢您来到我们的网站</p>
+            <button class="cta-button">开始探索</button>
+        </div>
+    </div>
 </body>
 </html>
