--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="welcome-content">
-            <h1>欢迎访问</h1>
+            <h1>欢迎来到高彦的个人博客</h1>
             <p>感谢您来到我们的网站</p>
             <button class="cta-button">开始探索</button>
         </div>
