--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>欢迎来到高彦的个人博客</h1>
             <p>感谢您来到我们的网站</p>
             <button class="cta-button">开始探索</button>
+            <a href="cool-styles.html" class="cta-button">查看炫酷的CSS页面</a>
         </div>
     </div>
 </body>
